Fix padding issue, icon spacing in columns

--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@ a.btn-icons:hover,
 a.btn-icons:focus {
     color: #ffffff;
     background-color: transparent;
-    padding: .75rem 1.25rem;
+    padding: 0.75rem 1.25rem;
 }
 
 /* Navigation bar styles */
@@ -144,15 +144,23 @@ a.btn-icons:focus {
 
 /* Info column styles */
 .info-block {
-    padding-top: 20px;
 }
 
 .info-column {
     float: left;
     text-align: center;
     width: 50%;
-    padding: 20px;
     height: 350px;
+}
+
+.info-column h4 {
+    text-align: center;
+    font-family: "Source Sans Pro";
+    font-size: 18px;
+    font-weight: 300;
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
 .info-column#coding {
